started defining model

--- a/model.ipynb
+++ b/model.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +38,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
@@ -53,11 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataloader_train = torch.utils.data.DataLoader(kmnist_train, batch_size=2, shuffle=True)"
+    "dataloader_train = torch.utils.data.DataLoader(kmnist_train, batch_size=2, shuffle=True)\n",
+    "dataloader_test = torch.utils.data.DataLoader(kmist_test, batch_size=2, shuffle=False)"
    ]
   },
   {
@@ -67,6 +77,27 @@
    "outputs": [],
    "source": [
     "hiragana = {0:'お', 1:'き', 2:'す', 3:'つ', 4:'な', 5:'は', 6:'ま', 7:'や', 8:'れ', 9:'を'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['o', 'ki', 'su', 'tsu', 'na', 'ha', 'ma', 'ya', 're', 'wo']"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_classes = len(kmnist_train.classes)\n",
+    "kmnist_train.classes"
    ]
   },
   {
@@ -114,17 +145,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Net(torch.nn.Module):\n",
+    "    def __init__(self, num_classes):\n",
+    "        super(Net, self).__init__()\n",
+    "        self.conv1 = torch.nn.Conv2d(1, 32, kernel_size=3,padding=1)\n",
+    "        self.pool = torch.nn.MaxPool2d(2,2)\n",
+    "        self.conv2 = torch.nn.Conv2d(32, 54, kernel_size=3, padding=1)\n",
+    "        self.fc1 = torch.nn.Linear(54*3*3, 120)\n",
+    "        self.fc2 = torch.nn.Linear(120, 84)\n",
+    "        self.fc3 = torch.nn.Linear(84, 10)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.conv1(x)\n",
+    "        x = torch.nn.ReLU(x)\n",
+    "        x = self.pool(x)\n",
+    "        x = torch.nn.ReLU(x)\n",
+    "        x = self.conv2(x)\n",
+    "        x = torch.nn.ReLU(x)\n",
+    "        x = self.fc1(x)\n",
+    "        x = torch.nn.ReLU(x)\n",
+    "        x = self.fc2(x)\n",
+    "        x = torch.nn.ReLU(x)\n",
+    "        x = self.fc3(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Net(num_classes=num_classes)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "criterion = torch.nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30000"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_total_steps = len(dataloader_train)\n",
+    "n_total_steps"
+   ]
   }
  ],
  "metadata": {
